fix word truncation

--- a/src/components/Input/style/Input.scss
+++ b/src/components/Input/style/Input.scss
@@ -296,7 +296,7 @@ $cls: #{$prefix}-#{$component};
     font-style: normal;
     line-height: 17px;
     word-wrap: break-word;
-    word-break: break-all;
+    word-break: keep-all;
 
     &-success {
       color: $color-success;
